--- a/PROJECT/style.css
+++ b/PROJECT/style.css
@@ -7,4 +7,11 @@ Body {
 
 h1 {
 	text-align: center;
-	
+	font-family: "Georgia", serif;
+	border-style: dotted;
+	border-color: blue;
+	border-width: 2px;
+	padding: 10px, 15px, 10px, 15px;
+	width: 250px;
+	margin-bottom: 20px;
+	background-color: #FFFF00;
